# weblens

./: .air.toml  .dockerignore  .gitignore  .gitmodules  .golangci.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GoBuild  LICENSE  Makefile  README.md  accessServiceImpl.go  album.go  albumServiceImpl.go  example.compose.yaml  fileService.go  go.mod  go.sum  go.work  go.work.sum  gogogadgetdocker.bash  instance.go  instanceServiceImpl.go  main.go  media.go  mediaServiceImpl.go  mediaType.go  package-lock.json  package.json  pnpm-lock.yaml  share.go  shareServiceImpl.go  user.go  userServiceImpl.go
.claude/: settings.json
api/: .env  README.md  api.go  apiLogic.go  api_api_keys.go  api_config.go  api_feature_flags.go  api_files.go  api_folder.go  api_media.go  api_servers.go  api_share.go  api_tags.go  api_towers.go  api_users.go  client.go  configuration.go  coverage.out  dump.rdb  git_push.sh  go.mod  go.sum  heap.out  main.go  main_test.go  model_add_user_params.go  model_api_key_params.go  model_backup_info.go  model_bundle.go  model_config.go  model_create_folder_body.go  model_file_action_info.go  model_file_create_tag_params.go  model_file_file_ids_params.go  model_file_id_array_info.go  model_file_info.go  model_file_search_result.go  model_file_share_params.go  model_file_update_tag_params.go  model_files_info.go  (+55 more)
backup/: backupCore.go  backup_test.go
classification/: Dockerfile  imageRecog.py  torch_requirements.txt
comm/: albums.go  apiHandlers.go  backupHandlers.go  caster.go  client.go  clientManager.go  coreConnect.go  coreHandlers.go  files.go  helpers.go  history.go  http_test.go  media.go  memFs.go  middleware.go  restParams.go  (+5 more)
embed/: README.md  extract.py  main.py  preload.py  pyproject.toml  test_encode.py  test_extract.py
embed/test_fixtures/: _generate.py  sample.docx  sample.pptx  sample.xlsx
hdir/: README.md  main.py  open.main.py  preload.py  pyproject.toml
(+1456 files in other folders)
