[project]
name = "embed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "transformers (>=4.40,<5.0)",
    "einops (>=0.7,<1.0)",
    "timm (>=1.0,<2.0)",
    "Pillow (>=10.0,<12.0)",
    "pypdf (>=4.0,<6.0)",
    "pytesseract (>=0.3.10,<1.0)",
    "python-docx (>=1.0,<2.0)",
    "openpyxl (>=3.1,<4.0)",
    "python-pptx (>=0.6,<2.0)",
    "pytest (>=8.0,<9.0)",
]
