[project]
name = "weblens-hdir"
version = "0.1.0"
description = "High Dimension Image Recognition"
authors = [
    {name = "EthRousseau",email = "ethanrousseau99+github@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "clip @ git+https://github.com/openai/CLIP.git",
    "ftfy (>=6.3.1,<7.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "open-clip-torch (>=3.0.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
