[project]
name = "hdir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "clip @ git+https://github.com/openai/CLIP.git",
    "ftfy (>=6.3.1,<7.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "open-clip-torch (>=3.0.0,<4.0.0)",
]
